Update dependency paths

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -1,7 +1,7 @@
 DEVICE     = attiny85
 CLOCK      = 8000000
 PROGRAMMER = usbasp
-OBJECTS    = main.o packet.o deps/util.o deps/softuart.o deps/rcswitch.o
+OBJECTS    = main.o packet.o deps/util.o deps/softuart/softuart.o deps/rcswitch/rcswitch.o
 FUSES      = -U lfuse:w:0xe2:m -U hfuse:w:0xdf:m -U efuse:w:0xff:m
 
 AVRDUDE = avrdude -c $(PROGRAMMER) -p $(DEVICE)
