Add build step to makefile

--- a/hardware/Makefile
+++ b/hardware/Makefile
@@ -23,9 +23,11 @@ FUSES      = -U lfuse:w:0xe2:m -U hfuse:w:0xdf:m -U efuse:w:0xff:m
 AVRDUDE = avrdude -c $(PROGRAMMER) -p $(DEVICE)
 COMPILE = avr-gcc -Wall -Werror -Os -DF_CPU=$(CLOCK) -mmcu=$(DEVICE)
 
-.PHONY: all flash fuse install clean
+.PHONY: all build flash fuse install clean
 
-all: main.hex
+all: build
+
+build: main.hex
 
 .c.o:
 	$(COMPILE) -c $< -o $@
