--- a/test/Makefile
+++ b/test/Makefile
@@ -15,7 +15,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 CC     = gcc
-CFLAGS = -Wall -Werror -lcmocka
+CFLAGS = -Wall -Werror -lcmocka -static
 OBJ    = src/main.o ../src/packet.o ../src/dynarray.o ../src/keyvalue.o
 BINARY = test
 
