Compile static cmocka

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
     - cd cmocka-1.0.1
     - mkdir build
     - cd build
-    - cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Debug ..
+    - cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Debug -DWITH_STATIC_LIB=1 ..
     - sudo make install
     - cd ../..
     - rm -rf cmocka-1.0.1
