--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 language: c
 install:
+    - sudo apt-get update cmake
     - wget https://cmocka.org/files/1.0/cmocka-1.0.1.tar.xz
     - tar xvf cmocka-1.0.1.tar.xz
     - cd cmocka-1.0.1
