--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
 before_install: cmake --version
 
 install:
+    - cd test
     - wget https://cmocka.org/files/1.0/cmocka-1.0.1.tar.xz
     - tar xvf cmocka-1.0.1.tar.xz
     - cd cmocka-1.0.1
