--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,22 @@ before_install: cmake --version
 
 install:
     - cd test
+    - mkdir -p build
+    - cd build
     - wget https://cmocka.org/files/1.0/cmocka-1.0.1.tar.xz
     - tar xvf cmocka-1.0.1.tar.xz
     - cd cmocka-1.0.1
-    - mkdir build
+    - mkdir -p build
     - cd build
     - cmake -DCMAKE_INSTALL_PREFIX=../../cmocka -DCMAKE_BUILD_TYPE=Debug -DWITH_STATIC_LIB=1 ..
     - make install
     - cd ../..
-    - rm -rf cmocka-1.0.1
-    - cd ..
+    - rm -rf cmocka-1.0.1 cmocka-1.0.1.tar.xz
+    - cd ../..
 
 script:
     - cd test
-    - mkdir build
+    - mkdir -p build
     - cd build
     - cmake -DCMOCKA_ROOT_DIR=cmocka ..
     - make
