Include CMocka include files and add CMocka definitions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,5 +20,9 @@ add_executable(run_tests ${test_SOURCES})
 # Find CMocka
 find_package(CMocka)
 
+# Include CMocka and add definitions
+include_directories(${CMOCKA_INCLUDE_DIR})
+add_definitons(${CMOCKA_DEFINITIONS})
+
 # Add dependencies
 target_link_libraries(run_tests packet cmocka)
