Don't add definitions for CMocka (only in version 3.0+)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,9 +20,8 @@ add_executable(run_tests ${test_SOURCES})
 # Find CMocka
 find_package(CMocka)
 
-# Include CMocka and add definitions
+# Include CMocka
 include_directories(${CMOCKA_INCLUDE_DIR})
-add_definitons(${CMOCKA_DEFINITIONS})
 
 # Add dependencies
 target_link_libraries(run_tests packet cmocka)
