--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
     - mkdir -p build
     - cd build
     - cmake -DCMAKE_INSTALL_PREFIX=../../cmocka -DCMAKE_BUILD_TYPE=Debug -DWITH_STATIC_LIB=1 ..
+    - make VERBOSE=1
     - make install
     - cd ../..
     - rm -rf cmocka-1.0.1 cmocka-1.0.1.tar.xz
